--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,18 +1,7 @@
 <div class="row">
   <div *ngFor="let gif of gifs" class="col-md-3 col-sm-6">
-    <div class="card mb-2 text-center bg-dark">
-
-      <img
-      [src]="gif.images.downsized_medium.url"
-      [alt]="gif.title"
-      class="card-img-top"
-      >
-      <div class="card-body">
-        <p class="card-text text-white">
-          {{gif.title}}
-        </p>
-      </div>
-
-    </div>
+    <gifs-card
+    [gif]="gif"
+    ></gifs-card>
   </div>
 </div>
